
<resources>
    <string name="app_name">El_ghabghoub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_planner">Planner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="status_start_text">Starts in</string>
    <string name="status_remaining_cycles">Remaining cycles</string>
    <string name="stop_text">Stop</string>
    <string name="schedule_text">Schedule</string>
    <string name="start_text">Start</string>
    <string name="status_watering_string">Status</string>
    <string name="please_make_sure_to_connect_to">Please make sure to connect to the device</string>
    <string name="connected_to">Connected to: %1$s</string>
    <string name="not_connected">Not connected to the device</string>
    <string name="watering_idle">Watering is idle</string>
    <string name="watering_planned">Watering is planned</string>
    <string name="watering_on">Watering is on</string>
    <string name="watering_off">Watering is off</string>
    <string name="status_watering_on_text">Watering On</string>
    <string name="status_watering_off_text">Watering Off</string>
    <string name="time_format">Day(s): %2d \nHour(s): %02d\nMin(s): %02d </string>
    <string name="unknown_error">Unknown Error</string>
    <string name="watering_stopped">Watering stopped</string>

</resources>