<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_watering"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:text="@string/status_watering_string"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_watering_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:text="@string/status_start_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_watering_on"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:text="@string/status_watering_on_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_watering_on_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_watering_off"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:text="@string/status_watering_off_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_watering_off_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/status_cycles"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxEms="12"
            android:text="@string/status_remaining_cycles"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status_remaining_cycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />
    <Button
        android:id="@+id/button_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

</LinearLayout>